fixed name overflow in clubs view

--- a/styles.css
+++ b/styles.css
@@ -260,6 +260,10 @@ html, body
     font-size: 3em;
     font-weight: 700;
     font-style: normal;
+
+    line-height: 1em;
+
+    margin: 0.25em 0 0.25em 0;
 }
 
 .clubs-list-item p
